--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,7 @@
     gtag('js', new Date());
     gtag('config', 'G-0SPG4BQ8Y6');
   </script>
+  <link rel="canonical" href="https://flagiumai.com/" />
 </head>
 
 <body>
