--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flagium AI</title>
+  <title>Flagium AI | Systematic Financial Risk Monitoring</title>
+  <meta name="description"
+    content="Systematic financial risk monitoring for capital preservation focused investors. Flagium AI provides structured risk visibility.">
 
   <!-- Google Analytics (GA4) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0SPG4BQ8Y6"></script>
